--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">LookingScooters</string>
+    <string name="title_domain">domain</string>
+    <string name="title_dynamicfeature">Module Title</string>
 </resources>
